# Hand_AI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
frontend/: index.html
