[project]
name = "rps-classifier"
version = "0.1.0"
description = "Rock Paper Scissors AI Trainer — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
serve = "uvicorn main:app --reload --port 8000"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",   # for testing endpoints
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
