[project]
name = "rps-classifier"
version = "0.1.0"
description = "Rock Paper Scissors AI Trainer — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
